# project-CDJ3000x

./: .gitignore  README.md  pyproject.toml
src/assistant/: __init__.py  main.py  storage.py  utils.py
src/assistant/commands/: __init__.py  contacts.py  notes.py  registry.py
src/assistant/models/: __init__.py  address_book.py  fields.py  note.py  record.py
tests/: test_commands.py  test_fields.py  test_models.py
