[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-assistant"
version = "0.1.0"
description = "Personal Assistant - CLI for managing contacts and notes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
assistant = "assistant.main:main"

[tool.setuptools.packages.find]
where = ["src"]
